--- a/src/app/dimensions/dimensions.component.html
+++ b/src/app/dimensions/dimensions.component.html
@@ -1,9 +1,9 @@
 <StackLayout>
     <Label [text]="testText"></Label>
 
-    <Label [text]="'scale: ' + testText.scale"></Label>
-    <Label [text]="'widthPixels: ' + testText.widthPixels"></Label>
-    <Label [text]="'heightPixels: ' + testText.heightPixels"></Label>
-    <Label [text]="'widthDIPs: ' + testText.widthDIPs"></Label>
-    <Label [text]="'heightDIPs: ' + testText.heightDIPs"></Label>
+    <Label [text]="'scale: ' + mainScreen.scale"></Label>
+    <Label [text]="'widthPixels: ' + mainScreen.widthPixels"></Label>
+    <Label [text]="'heightPixels: ' + mainScreen.heightPixels"></Label>
+    <Label [text]="'widthDIPs: ' + mainScreen.widthDIPs"></Label>
+    <Label [text]="'heightDIPs: ' + mainScreen.heightDIPs"></Label>
 </StackLayout>
